--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,17 @@
+@import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  width: 100svw;
+  height: 100svh;
+  display: flex;
+  place-items: center;
+
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,8 +32,9 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100svw;
+  height: 100svh;
+  overflow: hidden;
 }
 
 h1 {
