--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,8 +52,9 @@ h1 {
 .felt-bg {
   background-image:
   url('/textures/binding-light.png'),
-  linear-gradient(to top, #000000, #282828);
-  background-size: 100px 100px, 100% 100%;
+  url('/animated-pastel-bg.svg');
+
+  background-size: 200px 200px, 200% 200%;
   background-repeat: repeat;
   background-position: center;
   background-attachment: fixed;
